--- a/package.json
+++ b/package.json
@@ -9,10 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@google/generative-ai": "^0.1.3",
+    "@matejmazur/react-katex": "^3.1.3",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.3",
     "expo": "~49.0.15",
+    "expo-asset": "~8.10.1",
+    "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
+    "katex": "^0.16.9",
+    "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-animatable": "^1.4.0",
+    "react-native-base64": "^0.2.1",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.20.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-math-view": "^3.9.5",
+    "react-native-mime-types": "^2.4.0",
+    "react-native-progress": "^5.0.1",
+    "react-native-render-html": "^6.3.4",
+    "react-native-voice": "^0.3.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
